--- a/src/assets/scss/components/_list-block.scss
+++ b/src/assets/scss/components/_list-block.scss
@@ -1,10 +1,8 @@
-.list-block {
+.list-block,
+%list-block {
     &__title {
         //color:$green-dark;
         //color:$orange;
-        padding-bottom:$global-margin/2;
-        border-bottom: 1px solid $medium-gray;
-        margin-bottom:0;
     }
     &__list a {
         color:$orange;
@@ -14,4 +12,13 @@
         padding-bottom:$global-margin/2;
         padding-top:$global-margin/2;
     }
+}
+
+.l-region--above-footer .block__title {
+    @extend %list-block__title;
+    @extend h2;
+        padding-bottom:$global-margin/2;
+        border-bottom: 1px solid $medium-gray;
+        margin-bottom:0;
+        color:#5a9607;
 }
