--- a/src/assets/scss/_init.scss
+++ b/src/assets/scss/_init.scss
@@ -1,25 +1,34 @@
 //================================
 // Global stuff
 //================================
-@import 'components/fonts';
+@import 'system/fonts';
 @import 'components/layout';
 @import 'components/global-stuff';
 //================================
+// Pages
+//================================
+@import 'pages/landingpage';
+//================================
+// System
+//================================
+@import 'system/buttons';
+@import 'system/messages';
+@import 'system/pager';
+@import 'system/admin-tabs';
+//================================
 // Regions
 //================================
-@import 'components/topbar';
-@import 'components/showcase';
-@import 'components/offcanvas';
-@import 'components/above-footer';
-@import 'components/footer';
+@import 'regions/topbar';
+@import 'regions/showcase';
+@import 'regions/offcanvas';
+@import 'regions/above-footer';
+@import 'regions/footer';
+@import 'regions/sidebar';
 //================================
 // Components
 //================================
-@import 'components/buttons';
+@import 'components/social-media-menu';
 @import 'components/list-block';
-@import 'components/landingpage';
-
 @import 'components/search-facets';
-@import 'components/pager';
 @import 'components/search-result';
-@import 'components/sidebar';
+@import 'components/search-field';
