--- a/src/assets/scss/regions/_topbar.scss
+++ b/src/assets/scss/regions/_topbar.scss
@@ -37,7 +37,7 @@ $logo-width: 140px;
     }
     //text-indent: right;
 }
-.interior-pages .main-menu {
+.top-bar .main-menu {
     margin-left: $logo-width;
 }
 #block-system-user-menu {
