--- a/src/assets/scss/components/_list-block.scss
+++ b/src/assets/scss/components/_list-block.scss
@@ -15,7 +15,7 @@
 }
 
 .l-region--above-footer .block__title {
-    @extend %list-block__title;
+    //@extend %list-block__title;
     @extend h2;
         padding-bottom:$global-margin/2;
         border-bottom: 1px solid $medium-gray;
