--- a/src/assets/scss/_init.scss
+++ b/src/assets/scss/_init.scss
@@ -27,6 +27,7 @@
 //================================
 // Components
 //================================
+@import 'components/user-menu';
 @import 'components/social-media-menu';
 @import 'components/list-block';
 @import 'components/search-facets';
