--- a/src/assets/scss/regions/_topbar.scss
+++ b/src/assets/scss/regions/_topbar.scss
@@ -2,47 +2,91 @@
     background: $topbar-background;
 }
 
-.grid-container.top-bar {
+header .top-bar {
     position: relative;
 }
-$logo-width: 140px;
+//front page logo
 .logo-wrapper {
     position: absolute;
     top: 0;
-    left: 0;
-    width: rem-calc($logo-width);
-    z-index: 60;
+    left: $global-margin;
+    z-index: 33;
 }
-.top-bar {
-    .button-group {
+.small-logo {
+    //width: $logo-width-interior;
+    width: $logo-width-interior;
+}
+.large-logo {
+    display: none;
+}
+.front {
+    .large-logo {
+        display: none;
+    }
+    .small-logo {
+        width: 5rem;
+    }
+
+    @include breakpoint(medium) {
+
+        .large-logo {
+            display: block;
+            width:$logo-width-front;
+        }
+        .small-logo {
+            display:none;
+        }
+    }
+}
+/*
+ *interior pages
+ */
+
+    .logo-wrapper {
+        //width: rem-calc($logo-width-interior);
+        //width: $logo-width-interior;
+    }
+
+    .top-bar .main-menu {
+        //margin-left: $logo-width-interior;
+        margin-left: calc(#{ $logo-width-interior } + #{ $global-margin });
+        @include show-for(large);
+    }
+    /*
+     *front page
+     */
+    .front {
+        .logo-wrapper {
+            //width: $logo-width-front;
+        }
+        //dont show topbar main menu on lp
+        .top-bar .main-menu {
+            display:none;
+        }
+    }
+
+    .top-bar {
+        .button-group {
+            margin-bottom:0;
+        }
+    }
+
+    //mobile menu
+    .mobile-menu__button {
+        //@include hide-for(large);
+        float: right;
         margin-bottom:0;
+        @include breakpoint( large ) {
+            display:none;
+        }
+        //text-indent: right;
     }
-}
-
-//mobile menu
-.mobile-menu__button {
-    //@include hide-for(large);
-    float: right;
-    @include breakpoint( large ) {
-        display:none;
+    #block-system-user-menu {
+        @include show-for(large);
+        .menu a {
+            @extend .button;
+            margin: .5px;
+        }
     }
-    //text-indent: right;
-}
-.front .top-bar .main-menu {
-    display:none;
-}
-.top-bar .main-menu {
-    margin-left: $logo-width;
-    @include show-for(large);
-}
-#block-system-user-menu {
-    @include show-for(large);
-    .menu a {
-        @extend .button;
-        margin: .5px;
-    }
-
-
-}
 
 
