--- a/src/assets/scss/system/_fonts.scss
+++ b/src/assets/scss/system/_fonts.scss
@@ -1,3 +1,47 @@
+.proxima_nova {
+    p, h1 {
+        font-family: "Proxima Nova";
+
+    }
+}
+.proxima_nova_scosfthin { 
+    p, h1 {
+        font-family: "proxima_nova_scosfthin";
+    }
+}
+.proxima_nova_ltsemibold { 
+    p, h1 {
+        font-family: "proxima_nova_ltsemibold";
+    }
+}
+.proxima_nova_ltthin { 
+    p, h1 {
+        font-family: "proxima_nova_ltthin";
+    }
+}
+.proxima_nova_altblack { 
+    p, h1 {
+        font-family: "proxima_nova_altblack";
+    }
+}
+.proxima_nova_altbold { 
+    p, h1 {
+        font-family: "proxima_nova_altbold";
+    }
+}
+.proxima_nova_ltsemibold { 
+    p, h1 {
+        font-family: "proxima_nova_ltsemibold";
+    }
+}
+.proxima_nova_scosfthin { 
+    p, h1 {
+        font-family: "proxima_nova_scosfthin";
+    }
+}
+
+
+
 
 /** Proxima Nova **/
 
@@ -7,10 +51,10 @@
     font-family: 'proxima_nova_altblack';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.svg#proxima_nova_altblack') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Black-webfont.svg#proxima_nova_altblack') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -20,10 +64,10 @@
     font-family: 'proxima_nova_altbold';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.svg#proxima_nova_altbold') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Bold-webfont.svg#proxima_nova_altbold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -33,10 +77,10 @@
     font-family: 'Proxima Nova';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.svg#proxima_nova_altregular') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Alt Regular-webfont.svg#proxima_nova_altregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -50,10 +94,10 @@
     font-family: 'proxima_nova_scosfthin';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.svg#proxima_nova_scosfthin') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova ScOsf Thin-webfont.svg#proxima_nova_scosfthin') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -66,10 +110,10 @@
     font-family: 'proxima_nova_ltsemibold';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.svg#proxima_nova_ltsemibold') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Semibold-webfont.svg#proxima_nova_ltsemibold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -79,10 +123,10 @@
     font-family: 'proxima_nova_ltthin';
     //src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.eot');
     src: url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.woff2') format('woff2'),
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.woff') format('woff'),
-         url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.ttf') format('truetype');
-         //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.svg#proxima_nova_ltthin') format('svg');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.woff2') format('woff2'),
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.woff') format('woff'),
+    url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.ttf') format('truetype');
+    //url('../fonts/proxima-nova-web-fonts/fonts/Mark Simonson - Proxima Nova Thin-webfont.svg#proxima_nova_ltthin') format('svg');
     font-weight: normal;
     font-style: normal;
 
