created views and treaked the sidebar facets

--- a/src/assets/scss/_init.scss
+++ b/src/assets/scss/_init.scss
@@ -33,3 +33,4 @@
 @import 'components/search-facets';
 @import 'components/search-result';
 @import 'components/search-field';
+@import 'components/_pager.scss';
