--- a/src/assets/scss/components/_list-block.scss
+++ b/src/assets/scss/components/_list-block.scss
@@ -1,24 +1,21 @@
-.list-block,
-%list-block {
+.list-block, %list-block {
     &__title {
-        //color:$green-dark;
-        //color:$orange;
-    }
-    &__list a {
-        color:$orange;
-    }
-    &__list li {
-        border-bottom: 1px solid $medium-gray;
-        padding-bottom:$global-margin/2;
-        padding-top:$global-margin/2;
-    }
-}
-
-.l-region--above-footer .block__title {
-    //@extend %list-block__title;
-    @extend h2;
         padding-bottom:$global-margin/2;
         border-bottom: 1px solid $medium-gray;
         margin-bottom:0;
         color:#5a9607;
+    }
+    &--list-item {
+        border-bottom: 1px solid $medium-gray;
+        padding-bottom:$global-margin/2;
+        padding-top:$global-margin/2;
+        a {
+            color:$orange;
+        }
+
+    }
 }
+
+//the good the bad and the fugly
+.list-block .block__title { @extend %list-block__title; }
+
