--- a/src/assets/scss/components/_search-facets.scss
+++ b/src/assets/scss/components/_search-facets.scss
@@ -1,4 +1,6 @@
 .search-facets, %search-facets {
+@extend %green-box;
+
     &__block {
 
     }
@@ -34,7 +36,7 @@
     }
     &__facet-row {
         &:hover {
-            background: $light-gray;
+            background: white;
         }
     }
 }
