--- a/src/assets/scss/components/_user-menu.scss
+++ b/src/assets/scss/components/_user-menu.scss
@@ -1,3 +1,15 @@
+
+.user-menu,
+#block-system-user-menu {
+    @include show-for(large);
+    .menu a {
+        @extend .button;
+        margin: .5px;
+    }
+}
+
+
+
 //.user-menu,
 //%user-menu {
 
