working on search dropdown

--- a/src/assets/scss/components/_user-menu.scss
+++ b/src/assets/scss/components/_user-menu.scss
@@ -7,7 +7,17 @@
         margin: .5px;
     }
 }
+.menu-name-user-menu {
+    display: flex;
+}
+.search-dropdown__button {
 
+    margin-bottom: 0;
+padding: 0.7rem 1rem;
+margin-right: .5px;
+margin-left: .5px;
+
+}
 
 
 //.user-menu,
