working on search dropdown

--- a/src/assets/scss/components/_user-menu.scss
+++ b/src/assets/scss/components/_user-menu.scss
@@ -12,10 +12,8 @@
 }
 .search-dropdown__button {
 
-    margin-bottom: 0;
 padding: 0.7rem 1rem;
-margin-right: .5px;
-margin-left: .5px;
+        margin: .5px;
 
 }
 
