--- a/src/assets/scss/_init.scss
+++ b/src/assets/scss/_init.scss
@@ -33,4 +33,5 @@
 @import 'components/search-facets';
 @import 'components/search-result';
 @import 'components/search-field';
-@import 'components/_pager.scss';
+@import 'components/pager';
+@import 'components/citations';
