--- a/src/assets/scss/components/_user-menu.scss
+++ b/src/assets/scss/components/_user-menu.scss
@@ -19,6 +19,8 @@
     &__button {
         margin: 0.5px;
         padding: rem-calc(6);
+        //background: $black;
+        -webkit-appearance: initial !important;
         &[aria-expanded='true'] {
             background: $green;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
