--- a/src/assets/scss/components/_search-facets.scss
+++ b/src/assets/scss/components/_search-facets.scss
@@ -44,16 +44,13 @@
 
 .search-facets,
 %search-facets {
-    //@extend %green-box;
+    margin-right: $global-margin;
     margin-bottom: $global-margin;
     .is-dropdown-submenu {
         //display: block !important;
     }
-    .menu .submenu a {
-        display: inline;
-    }
     a.button {
-        @extend .hollow;
+        //@extend .hollow;
         &:hover {
             background: #efffd8;
             //outline: 1px solid $green;
@@ -62,24 +59,23 @@
     &__block {
     }
     &__block-title {
-        /*display: none;*/
-        @extend .button;
-        border: 1px solid $green;
+        /*blah*/
     }
     &__facet {
+        //@include callout;
+        border-bottom: 1px dotted #ccc;
+        margin-bottom: $global-margin;
         ul {
-            @extend .no-bullet;
             /*margin:0;*/
             padding: 0;
-            padding: 10px;
+            /*padding: 10px;*/
             //background:$orange-lighter;
-            background: #efffd8;
+            //background: #efffd8;
             a {
                 padding: 0;
             }
             .submenu a {
                 display: inline !important;
-                //display: ial;
             }
         }
         //border-bottom:1px solid #ccc;
@@ -100,10 +96,10 @@
         width: 1rem;
     }
     &__facet-row {
-        border: 1px solid #efffd8;
+        border: 1px solid #fff;
         border-width: 1px 0;
         &:hover {
-            background: white;
+            background: #efffd8;
             border-color: #ccc;
         }
     }
@@ -156,42 +152,6 @@
     }
 }
 //============================================
-.product-filters {
-    padding: 0.5rem 1.5rem;
-    background-color: $white;
-    margin-top: 2.5rem;
-
-    label {
-        color: $dark-gray;
-    }
-
-    .menu.nested {
-        margin-left: 0rem;
-        margin-bottom: 0.9rem;
-    }
-
-    .menu > li > a {
-        padding-left: 0;
-        color: darken($dark-gray, 25%);
-        font-size: 0.85rem;
-        font-weight: 600;
-    }
-
-    .is-accordion-submenu-parent > a::after {
-        border-color: $medium-gray transparent transparent;
-    }
-
-    .clear-all {
-        font-size: 0.9rem;
-        color: $medium-gray;
-    }
-
-    .more {
-        color: $primary-color;
-        font-size: 0.9rem;
-        cursor: pointer;
-    }
-}
 
 [aria-label='Date'] .submenu {
     //display: block;
@@ -207,21 +167,4 @@
     .ui-corner-all {
         border-radius: 0px;
     }
-}
-
-.product-filters-header {
-    font-size: 1.25rem;
-    padding-top: 0.5rem;
-}
-
-.product-filters-tab {
-    border-top: 1px solid $light-gray;
-}
-
-.product-filters-tab:last-child() {
-    border-bottom: 1px solid $light-gray;
-}
-
-.mobile-product-filters {
-    border-bottom: 1px solid $light-gray;
 }
