added new logos to img folder

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -87,6 +87,7 @@ $red-light: #ff5252;
 $yellow: #f8dd24;
 $yellow-light: #fff370;
 $orange: #f89624;
+$orange-new: #E65200;
 $orange-dark: #dd6e26;
 $orange-light: #f6b521;
 $orange-lighter: #fdf0b6;
